# feibai

./: PLAN.md  README.md  install.sh
crates/feibai/: Cargo.toml
crates/feibai-core/: Cargo.toml
crates/feibai-core/src/: lib.rs
crates/feibai-pinyin/: Cargo.toml
crates/feibai-pinyin/src/: engine.rs  lib.rs
crates/feibai-pinyin/tests/: input_flow.rs
crates/feibai-ui/: Cargo.toml
crates/feibai-ui/src/: lib.rs  renderer.rs
crates/feibai-wl/: Cargo.toml
crates/feibai-wl/src/: main.rs  popup.rs
crates/feibai/src/: ibus.rs  main.rs  popup.rs
data/: feibai.xml  pinyin_table.tsv
data/dicts/: SOURCES.md  feibai.en.dict.yaml  feibai.extra.dict.yaml  feibai.tech.dict.yaml
